Review course 09 (#872)
Co-authored-by: Olivier Tischhauser <olivier.tischhauser@heig-vd.ch>